--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -985,7 +985,7 @@ img {
 .footer__copy {
     font-size: var(--smaller-font-size);
     text-align: center;
-    color: var(--text-color-light);
+    color: white;
     margin-top: var(--mb-3);
 }
 
